# esp32s3-camila

./: .gitignore  README-es.md  README.md
components/codec_board/: CMakeLists.txt  board_cfg.txt  cfg_parse.c  codec_board.c  codec_init.c  idf_component.yml  lcd_init.c
components/codec_board/include/: codec_board.h  codec_init.h
components/edge_impulse/: CMakeLists.txt
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_1015229_5_compiled.cpp  tflite_learn_1015229_5_compiled.h
components/esp-bsp/bsp/esp-box-3/: esp-box-3.c  idf_component.yml
components/esp-bsp/bsp/esp-box-3/include/bsp/: config.h  display.h  esp-box-3.h
components/esp_webrtc/impl/apprtc_signal/: https_client.c
components/esp_webrtc/impl/peer_default/: CMakeLists.txt
components/esp_webrtc/include/: esp_webrtc.h
components/esp_webrtc/src/: dtls_common.h  esp_webrtc.c
solutions/common/: media_sys.h  network.c  network.h  network_storage.c  network_storage.h  wifi_session_state.c  wifi_session_state.h
solutions/openai_camila/: CMakeLists.txt  diff.txt  out.txt  partitions.csv  sdkconfig.defaults
solutions/openai_camila/.agent/skills/esp32-clean-build-flash/: SKILL.md
solutions/openai_camila/.agent/skills/esp32-clean-build-flash/scripts/: executor.bat
solutions/openai_camila/data/: init.lua
solutions/openai_camila/main/: CMakeLists.txt  idf_component.yml
solutions/openai_camila/main/alert/: alert_dispatcher.c  alert_dispatcher.h
solutions/openai_camila/main/audio/: media_sys.h  mute_handler.c  mute_handler.h
solutions/openai_camila/main/ble/: ble_common.c  ble_common.h  ble_config.c  ble_config.h  ble_device_control.c
solutions/openai_camila/main/config/: config_manager.c  nvs_setup.c  nvs_setup.h  prompts.h  settings.h
solutions/openai_camila/main/core/: common.h  esp_claw_init.c  esp_claw_init.h  lua_benchmark.c  main.c  orchestrator_fsm.c  orchestrator_fsm.h  orchestrator_helpers.c  orchestrator_helpers.h  orchestrator_tasks.c  orchestrator_tasks.h  orchestrator_vigilante.c
solutions/openai_camila/main/hardware/: board.c  kill_switch.c  kill_switch.h
solutions/openai_camila/main/openai/: http_client.c  responses_client.c  web_search.c
solutions/openai_camila/main/sensing/: csi_dsp.c  csi_handler.c  csi_handler.h  esp_now_beacon.c  esp_now_beacon.h
solutions/openai_camila/main/ui/: boca_abierta.c  boca_cerrada.c  camila_lvgl_ui.c  camila_lvgl_ui.h  simi.c  simi.h  simi_canvas.c  ui.c  ui.h  ui_config.h
solutions/openai_camila/main/webrtc/: lua_mic_bindings.c  lua_mic_bindings.h  openai_signaling.c  webrtc.c  webrtc.h
solutions/openai_demo/: CMakeLists.txt  sdkconfig.bak  sdkconfig.defaults  sdkconfig.defaults.esp32s3  testout.txt
solutions/openai_demo/.agent/skills/esp32-clean-build-flash/scripts/: build_flash.ps1
solutions/openai_demo/data/: init.lua
solutions/openai_demo/main/: CMakeLists.txt  idf_component.yml
solutions/openai_demo/main/audio/: media_sys.c  media_sys.h  mute_handler.c
solutions/openai_demo/main/ble/: ble_common.c  ble_device_callbacks.c  ble_device_callbacks.h  ble_device_control.c  ble_device_control.h
solutions/openai_demo/main/config/: config_manager.c  config_manager.h  nvs_setup.c  nvs_setup.h  prompts.h  settings.h
solutions/openai_demo/main/core/: app_events.h  common.h  esp_claw_init.c  esp_claw_init.h  lua_benchmark.h  main.c  orchestrator_fsm.c  orchestrator_helpers.c  orchestrator_helpers.h  orchestrator_tasks.c  orchestrator_vigilante.h  sensor_dock.c  sensor_dock.h
solutions/openai_demo/main/hardware/: aht20.c  aht20.h  aht30.c  aht30.h  board.c  ir_action_map.c  ir_action_map.h  ir_sniffer.c  ir_sniffer.h  radar.c  radar.h
solutions/openai_demo/main/openai/: assistants.c  assistants.h  http_client.h  responses_client.c  responses_client.h  web_search.h
solutions/openai_demo/main/sensing/: csi_dsp.h  csi_handler.c  ei_inference.cpp  ei_inference.h
solutions/openai_demo/main/ui/: simi.c  simi.h  simi_canvas.c  simi_canvas.h  ui.c  ui.h
solutions/openai_demo/main/webrtc/: fix.py  lua_ir_bindings.c  lua_ir_bindings.h  openai_signaling.c  webrtc.c  webrtc.h
tools/: build_all.pl  gen_ci.py
